source/hybridpages/assets/stylesheets/elements/_home.scss
.important-title {

  color: $hero-title-color;
  background: $title-color;
  text-align: center;
  text-transform: uppercase;
  padding: 20px 0;

  a {

    color: $hero-subtitle-color;
  }
}


.homepage-platform {

  list-style: none !important;
  margin: 0;

  li {

    @include small-screen {

      width: 49%;
      float: none;
    }

    display: inline-block;
    width: 19%;
    margin: 20px 0;
    text-align: center;

    img {

      &:hover {

        opacity: .8;
      }
    }

    a {

      p.title {
        color: $lesser-title-color;
        padding:10px;
        display: block;
        width: 100%;
      }
      &:hover p.title {
        color: $title-color;
      }
      
    }

    .repo {

      a {

        color: white;
        background: url(/images/elements/repo_icon.svg) center center no-repeat;
        padding: 20px 0;
        display: block;
        width: 100%;

        &:hover {
          background: url(/images/elements/repo_icon_hover.svg) center center no-repeat;
          color: $hero-link-color;
        }
      }
    }
  }
}

.triangles {

  width: 100%;
  height: 4vw;
  position: relative;

  .triangle-left-black {
    position: absolute;
    width: 50%; 
    background: url('/images/elements/triangle_left_black.svg') top left no-repeat;
    min-height: 30px;
    height: 100%; 
    background-size: cover;
  }

  .triangle-right-black {

    position: absolute;
    right: 0;
    width: 50%;
    background: url('/images/elements/triangle_right_black.svg') right top no-repeat;
    min-height: 30px;
    height: 100%; 
    background-size: cover;
  }

  .triangle-left-grey {

    position: absolute;
    width: 50%;
    background: url('/images/elements/triangle_left_grey.svg') top left no-repeat;
    background-color: #000;
    min-height: 30px;
    height: 100%; 
    background-size: cover;
  }

  .triangle-right-grey {
    position: absolute;
    right: 0; 
    width: 50%;
    background: url('/images/elements/triangle_right_grey.svg') right top no-repeat;
    background-color: #000;
    min-height: 30px;
    height: 100%; 
    background-size: cover;
  }
 }

.hero-black {
  width: 100%;
  top: -85px;
  position: relative;
  z-index: 2;

  @media only screen and (max-width: $medium-screen) {

    background-size: 99% 100%;
    margin-top: -35px;
  }

  .hero-black-container {
    background: #000;
    padding: 20px 0 40px 0;
    color: $body-bg-color;

    h2 {
      color: $cta-color;
    }

    .CodeRay, code, pre {
      background-color: #000;
      border: 1px solid $body-bg-color; 
      color: $cta-code-color;
      font-weight: 700;
    } 
  }
}

.hero {


  margin: 15px 0 0 0;
  padding: 20px 0 10px 0;

  @include small-screen {

    margin-top: -8px;
  }

  .container {

      @include outer-container;
  }


  .right-side {
    @include span-columns(5);
    img {
      width: 100%;
      margin-top: 35px;

      @media only screen and (max-width: $big-screen) {

        margin-top: 85px;
      }
    }
    @media only screen and (max-width: $medium-screen) {

      display: none;
    }
    @media only screen and (min-width: $small-screen) and (max-width: $medium-screen) {

      img {
        width: 80%;
        margin-top: 15px;
      }
    }
  }

  .left-side {

    @include span-columns(7);
    @media only screen and (max-width: $medium-screen) {

      @include span-columns(12);
      text-align: center;
    }

    .title {

      @include title-font(35px, white);
      line-height: 40px;
      width: 100%;
      clear: both;
      opacity: 0.94;
      margin: 0;
      @media only screen and (max-width: $medium-screen) {

        font-size: 20pt !important;
      }

      @include small-screen {

        font-size: 23px;
        line-height: 27px;
        padding: 0;

        br {

          display: none;
        }
      }

      @include medium-screen {

        font-size: 33px;
        line-height: 42px;
      }
    }

    .subtitle {

      @media only screen and (max-width: $medium-screen) {

        @include title-font(15px, white);
      }

      @include title-font(20px, white);
      font-weight: 550;
      opacity: 0.94;
      margin: 0;
      line-height: 36px;
      margin-top: 3px;

      @include small-screen {

        font-size: 18px;
        line-height: 22px;
        margin-top: 4px;
        padding: 0;
      }
    }
  }

  a.cta {

    @extend .cta;
  }

  a {

    @extend .hero-anchors;
  }
}

.social {

  line-height: 0;
  padding: 20px 0;
    @media only screen and (max-width: $big-screen) {

      margin-bottom: 85px;
    }

  .container{
    @media only screen and (min-width: $medium-screen) and (max-width: $big-screen) {

      padding-left: 0;
    }
  }

  .twitter-follow-button {

    vertical-align: top;
  }

  .splitter {

    display: inline-block;
    height: 21px;
  }

  @include small-screen {

    .splitter {

      display: block;
      margin-bottom: 5px;
    }

    #twitter-widget-1{

      display: none;
    }

    #twitter-widget-0{
      
      width: 99px !important;
    }

    .fork{

      display: none;
    }
  }
}

.cta {

  padding: 10px 20px;
  display: inline-block;
  margin: 17px 0 0 0;
  font-size: 19px;
  font-weight: bold;

  &, &:visited, &:active {

    background: $cta-color;
    color: $cta-text-color;
  }

  &:hover, &:focus {

    background: $cta-hover-color;
    color: $cta-text-hover-color;
  }

  @include small-screen {

    font-size: 16px;
    padding: 8px 15px;
  }
}



.catcher {

  margin: 0 0 38px 0;
  background: $social-catcher-background-color;
  padding: 20px;

  .phrase {

    margin: 0;
  }

  .cta {

    margin-top: 8px;
  }
}

